<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:padding="15dp"
            android:text="@string/wallet_detailes"
            android:textSize="15sp"
            android:typeface="sans"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_balence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/current_balence"
            android:textSize="15sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_wallet" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:padding="10dp"
            android:text="@string/rs_30"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_balence"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_balence" />

        <TextView
            android:id="@+id/text_dolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/dolor_nec_fusce_aliquam_egastas_sem_vulputate_ut_blandit"
            android:textSize="14dp"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_balence" />


        <TextView
            android:id="@+id/text_wallet_Transcation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/wallet_transaction"
            android:textSize="15sp"
            android:typeface="monospace"
            app:layout_constraintTop_toBottomOf="@+id/text_dolor" />

        <View
            android:id="@+id/devider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark"
            app:layout_constraintTop_toBottomOf="@+id/text_wallet_Transcation" />

        <TextView
            android:id="@+id/text_card_details"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/grey"
            android:padding="15dp"
            android:text="@string/card_details"
            android:textSize="13sp"
            android:typeface="monospace"
            app:layout_constraintTop_toBottomOf="@+id/devider" />


        <TextView
            android:id="@+id/text_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/card_no"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/text_card_details" />

        <TextView
            android:id="@+id/text_add_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_cash"
            android:textAlignment="center"
            android:textSize="18sp"
            android:typeface="monospace"
            app:layout_constraintTop_toBottomOf="@+id/text_card_number" />

        <Button
            android:id="@+id/button_rs500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/light"
            android:numeric="integer"
            android:text="@string/rupess_500"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toStartOf="@+id/button_rs1000"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_cash" />

        <Button
            android:id="@+id/button_rs1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/light"
            android:text="@string/rupess_1000"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toStartOf="@+id/button_rs1500"
            app:layout_constraintStart_toEndOf="@+id/button_rs500"
            app:layout_constraintTop_toBottomOf="@+id/text_add_cash" />

        <Button
            android:id="@+id/button_rs1500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/light"
            android:text="@string/rupess_1500"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_rs1000"
            app:layout_constraintTop_toBottomOf="@+id/text_add_cash" />

        <EditText
            android:id="@+id/ed_enter_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/enter_amount"
            android:padding="15dp"
            android:textAlignment="center"
            android:typeface="monospace"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_rs1000" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="8dp"
            android:background="@color/pink"
            android:text="@string/add_cash"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_enter_amount" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>